2011-06-10  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* CMakeLists.txt:

	- With the new FindMatlab.cmake, there's no longer need to
	provided MATLAB_ROOT.

	* FindMatlab.cmake:

	- (v0.2.0) Major rewrite of how the MEX libraries and include
	directory are found in non-Windows systems. Now we are using shell
	commands, e.g. "find". The original FindMatlab.cmake relied on
	some hard-coded paths that have been removed.

	* ItkToolbox/CMakeLists.txt, FiltersToolbox/CMakeLists.txt:

	- Conditional to avoid compilation flags that should not be used
	for Windows.

	- Windows requires that ARCHIVE is given as a target for INSTALL
	because it treats static libraries as ARCHIVE.

	* FindMatlab.cmake:

	- Major rewrite of how the MEX libraries are found in Windows.

2011-06-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- (v0.3.2) Edit helper header to make clear that gx, gy, gz
	correspond to the coordinates of where the NRRD volume was
	actually sampled to obtain IM. Hence, for INTERP='nn' if you plot
	the plane, it will in general look a bit "jagged" instead of flat.

	- Thanks to Pablo Lamata for pointing out that this feature was
	not clear in the help header.

	* Add FindMatlab.cmake:

	- To make a derivative work of file FindMatlab.cmake released with
	CMake v2.8, because the original seems to be a bit outdated and
	doesn't work with my Windows XP and Visual Studio 10
	install. (Note that the original file does work for Ubuntu Natty)

2011-06-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.5.0) Remove CC.dbif. The Maurer distance is quite misleading
	if the vessel's cross section is very elliptical.

	* FiltersToolbox/skeleton_label.m:

	- (v0.10.0) Add merging of neighbouring branches that are a
	continuation of each other. The merging is controlled by new input
	arguments alphamax, p.

2011-06-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
